<resources>
    <string name="app_name">HD Backgrounds</string>

    <string name="titul_drawer">HD Обои</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nature">Природа</string>
    <string name="tech">Техника</string>
    <string name="animals">Животные</string>
    <string name="arch">Архитектура</string>
    <string name="art">Искусство</string>
    <string name="background">Фон</string>
    <string name="eat">Еда</string>
    <string name="seasons">Времена года</string>
    <string name="holidays">Праздники</string>
    <string name="religion">Религия</string>
    <string name="anime">Аниме</string>
    <string name="celebrities">Знаменитости</string>
    <string name="brands">Бренды</string>
    <string name="image">Изображение</string>
    <string name="share_message">Привет! Хочу поделиться с тобой изображением для HD-обои:</string>

    <string name="establish_message">Вы хотите установить данную картинку в качестве HD-обои ?</string>

    <string name="message_setting">Получение доступа к хранилищу</string>
    <string name="yes">Да</string>

    <string name="cancel">Отмена</string>

    <string name="ok">Ок</string>


    <string name="my_drawable">Ваша картинка</string>

    <string name="establish_error">Ошибка установки картинки</string>
    <string name="establish_successful">Картинка установлена</string>

    <string name="error_load">Ошибка загрузки.Вернуться назад?</string>


    <string name="save_successful">Картинка  сохранена по пути:</string>
    <string name="save_error">Картинка не сохранена</string>


    <string name="head_name_file">hdbackgrounds</string>


    <string name="data_error">Ошибка получения данных</string>


    <string name="save_in_pictures">и в папке Pictures</string>




    <string name="permission_explanation">Для сохранения картинок приложению требуется доступ к файловой системе</string>
    <string name="permission_granted">Разрешение на чтение и запись файлов было предоставлено</string>
    <string name="permission_denied">Чтение и запись файлов запрещена</string>


    <string name="not_internet">Подключите интернет и перезапустите приложение!!!</string>

</resources>
